--- a/utils/config.json
+++ b/utils/config.json
@@ -2,5 +2,9 @@
   "some_info": "This is a test file for the test branch",
   "some_secret_info": {
     "$ref": "some_secret"
+  },
+  "some_other_secret_info": {
+    "$ref": "some_other_secret",
+    "required": true
   }
 }
