a node reference can include an inline placeholder and this one will be resolved first, after it, all reference node will be replaced

--- a/utils/config.yaml
+++ b/utils/config.yaml
@@ -5,7 +5,7 @@ list:
 - $ref: '#/definitions/short_value'
 - ${@env.placeholder}
 - test
-- $ref: ./imported.json#/spec/some_property
+- $ref: subdir/imported.json#/spec/some_property
 - $ref: '@env.child'
 parent:
   child:
@@ -15,7 +15,7 @@ parent:
   hardcoded: test
   placeholder: ${@env.placeholder}
   referenced_property:
-    $ref: ./imported.json#/spec/some_property
+    $ref: subdir/${@env.filename}#/spec/some_property
   short_value:
     $ref: '#/definitions/short_value'
 some_info: This is a test file for the test branch
